# blowtorch

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
aurora/: __init__.py  bound_functions.py  config.py  context.py  definitions.py  loggers.py  run.py  utils.py
aurora/backends/: base_backend.py  cpu_backend.py  gpu_backend.py
blowtorch/: __init__.py  bound_functions.py  config.py  ddp_test.py  ddp_utils.py  loggers.py  run.py  utils.py
blowtorch/backends/: base_backend.py  cpu_backend.py  gpu_backend.py
