[metadata]
# replace with your username:
name = blowtorch
version = 0.2
author = Alexander Becker
description = Intuitive training framework for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alebeck/blowtorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    colorama
    PyYAML>=5.1.2
    halo
    coolname
    tqdm