[metadata]
name = blowtorch
version = 0.5.3
author = Alexander Becker
description = Intuitive training framework for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alebeck/blowtorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = blowtorch, blowtorch.backends
python_requires = >=3.8
install_requires =
    wheel
    colorama==0.4
    ruamel.yaml
    halo==0.0.31
    coolname==1.1
    tqdm==4.30